# FracStack

./: .gitignore  README.md  pyproject.toml  requirements-pyqt.txt  requirements.txt  setup.py
examples/: example_3d_usage.py  testing.ipynb
fracstack/: __init__.py  boxcount.py  boxcount_3d.py  core.py  image_processing.py  singularity_spectrum_test.ipynb  tiling.py  visualization.py
fracstack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
fracstack/__pycache__/: boxcount.numba_d0-13.py312.1.nbc  boxcount.numba_d0-13.py312.nbi  boxcount.numba_d0-15.py312.1.nbc  boxcount.numba_d0-15.py312.nbi  boxcount.numba_d0-16.py312.1.nbc  boxcount.numba_d0-16.py312.nbi  boxcount.numba_d1-54.py312.1.nbc  boxcount.numba_d1-54.py312.nbi
fracstack/fracstack.egg-info/: SOURCES.txt  requires.txt
fracstack/test_images/: fractal_42.tif
